--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,17 @@ body {
 .react-datetime-picker input:focus {
       outline: none;
 }
+
 .react-datetime-picker__wrapper {
       border: 0px solid gray !important;
+}
+
+/* FABS */
+.fab {
+      border-radius: 100%;
+      bottom: 25px;
+      font-size: 20px;
+      padding: 25px;
+      position: fixed;
+      right: 25px;
 }
